tests/e2e/pass/m24_read_file.ep
# EXIT: 35
fun main(): void {
    let src = read_file("tests/e2e/pass/m1_exit.ep")
    os.ExitProcess(i64(src[0]))
}
