tests/e2e/fail/callback_address_os.ep
# COMPILE_ERROR: ptr cannot take the address of os binding 'ExitProcess'

fun main(): void {
    let callback = ptr(os.ExitProcess)
}
